Ahora guarda los documentos para ser mostrados como Hipervinculos

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,7 +40,8 @@ javac.classpath=\
     ${file.reference.bson-3.0.4.jar}:\
     ${file.reference.mongodb-driver-3.0.4.jar}:\
     ${file.reference.mongodb-driver-core-3.0.4.jar}:\
-    ${file.reference.sax2r2.jar-1}
+    ${file.reference.sax2r2.jar-1}:\
+    ${libs.Mongodb.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
